[package]
name = "t-na"
version = "0.1.0"
authors = ["Gijs de Jong <14833076+OxKitsune@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.9.0-rc.1", features = ["rustls_backend"]}
tokio = "0.2"
chrono = "0.4.15"
rusqlite = { version = "0.23.1", features = ["bundled"]}
reqwest = "0.10.8"
image = "0.23.9"
r2d2 = "0.8.9"
r2d2_sqlite = "0.16.0"
fern = "0.6.0"
log = "0.4.11"
rspotify = "0.10.0"

